--- a/JavaApplication7/src/vista/MainWindow.form
+++ b/JavaApplication7/src/vista/MainWindow.form
@@ -243,7 +243,7 @@
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="0">
-                            <Column editable="true" title="C&#xf3;digo" type="java.lang.Integer"/>
+                            <Column editable="false" title="C&#xf3;digo" type="java.lang.Integer"/>
                             <Column editable="true" title="Nombre" type="java.lang.String"/>
                             <Column editable="true" title="Stock" type="java.lang.Integer"/>
                           </Table>
